--- a/_data/links.yml
+++ b/_data/links.yml
@@ -566,7 +566,7 @@
   - title: "See through walls"
     url: https://www.theregister.co.uk/2017/06/20/drones_and_wifi_see_thru_walls/  
   
-- section: "Other stuff"
+- section: "Other"
   wins:
   - title: "Juggle balls in mid-air"
     url: https://gizmodo.com/5786711/quadrotor-drones-can-juggle-balls-with-each-other  
