--- a/_data/links.yml
+++ b/_data/links.yml
@@ -111,6 +111,8 @@
     url: https://www.psfk.com/2017/11/alibaba-has-introduced-an-ai-fashion-assistant.html
   - title: "Mix cocktails"
     url: https://www.wgsn.com/blogs/sxsw-ibm-watson-could-be-mixing-your-next-drink-and-analysing-your-personality-too/
+  - title: "Tell you if you have spots or wrinkles"
+    url: https://www.theverge.com/2017/1/4/14166064/himirror-plus-scan-smart-mirror-ces-2017
   near:
   - title: "Cook your meals"
     url: https://www.forbes.com/sites/eustaciahuen/2016/10/31/the-worlds-first-home-robotic-chef-can-cook-over-100-meals/
@@ -156,6 +158,8 @@
     url: https://tractable.ai/products/insurance/
   - title: "Analyse red carpet fashions"
     url: http://watson.grammy.com/fashion
+  - title: "Sort and grade job applicants"
+    url: http://uk.businessinsider.com/hirevue-uses-ai-for-job-interview-applicants-goldman-sachs-unilever-2017-8
   near:
   - title: "Run a hotel reception desk"
     url: https://www.theverge.com/2016/3/9/11180418/hilton-ibm-connie-robot-watson-hotel-concierge
@@ -165,6 +169,9 @@
     url: https://www.economist.com/news/business/21725599-technology-may-be-disrupting-peculiar-business-can-data-predict-fashion-trends
   - title: "Match art to potential buyers"
     url: https://www.bloomberg.com/news/articles/2018-01-25/sotheby-s-buys-machine-learning-firm-to-discern-the-art-you-love
+  - title: "Evaluate the performance of sportspeople"
+    url: https://www.sporttechie.com/nvidia-deep-learning-video-analytics-automate-future-player-scouting/
+
 - section: "Financial"
   wins:
   - title: "Detect payment fraud"
@@ -268,6 +275,8 @@
     url: http://ironox.com/about.html
   - title: "Harvest strawberries"
     url: http://www.dogtoothtech.com/about-us.html
+  - title: "Reduce the cost of fish farming"
+    url: https://www.forbes.com/sites/alexknapp/2018/01/30/this-startup-is-raising-3-5-million-to-add-machine-learning-to-fish-farms/
 
 - section: "Transport"
   wins:
@@ -276,6 +285,8 @@
   - title: "Give you driving directions"
     url: https://motherboard.vice.com/en_us/article/4x3pp9/the-simple-elegant-algorithm-that-makes-google-maps-possible    
   does:
+  - title: "Predict airline delays"
+    url: https://techcrunch.com/2018/01/31/google-flights-will-now-predict-airline-delays-before-the-airlines-do/
   - title: "Predict how long you'll wait for a taxi"
     url: https://www.geekwire.com/2016/uber-collapse-without-pattern-finding-computers-says-chief-machine-learning/
   - title: "Land a passenger aeroplane"
@@ -305,6 +316,8 @@
   does:
   - title: "Detect benefit fraud"
     url: http://www.telegraph.co.uk/news/2017/12/31/ministers-use-artificial-intelligence-target-mass-benefit-fraud/
+  - title: "Reduce urban congestion"
+    url: https://qz.com/1191599/alibaba-is-reshaping-city-traffic-with-artificial-intelligence/
   near:
   - title: "Predict court cases"
     url: https://www.ucl.ac.uk/news/news-articles/1016/241016-AI-predicts-outcomes-human-rights-trials
@@ -316,6 +329,8 @@
     url: https://www.theverge.com/2018/1/18/16905962/algorithm-resettle-refugees-machine-learning-research-employment
   - title: "Rate school performance"
     url: https://www.wired.co.uk/article/nudge-unit-machine-learning-algorithms-schools-ofsted-doctors-behavioural-insights
+  - title: "Predict government corruption"
+    url: http://bigthink.com/paul-ratner/ai-researchers-develop-neural-networks-to-predict-government-corruption
 
 - section: "Education"
   wins:
@@ -368,6 +383,8 @@
   - title: "Diagnose osteoarthritis of the knees"
     url: https://blogs.nvidia.com/blog/2018/01/18/ai-osteoarthritis/
   near:
+  - title: "Enhance cancer pathology reports"
+    url: https://techcrunch.com/2018/02/05/paige-ai-nabs-25m-inks-ip-deal-with-sloan-kettering-to-bring-machine-learning-to-cancer-pathology/
   - title: "Diagnose prostate cancer"
     url: https://cloud.google.com/customers/maxwell-mri/
   - title: "Diagnose common conditions"
@@ -388,6 +405,10 @@
     url: https://arxiv.org/abs/1711.06402
   - title: "Detect suicidal thoughts"
     url: https://www.seeker.com/tech/artificial-intelligence/brain-imaging-technology-uses-machine-learning-to-identify-suicidal-thoughts
+  - title: "Talk to people with depression"
+    url: https://futurism.com/new-app-for-depression-uses-artificial-intelligence-for-therapy-treatments/
+  - title: "Organise clinical trials"
+    url: https://www.wired.com/story/meet-the-company-trying-to-democratize-clinical-trials-with-ai
 
 - section: "Science"
   wins:
@@ -464,6 +485,10 @@
     url: http://www.firstpost.com/tech/news-analysis/us-developing-system-to-protect-borders-with-artificial-intelligence-drones-and-self-driving-cars-3835915.html
   - title: "Detect child abuse images"
     url: http://www.telegraph.co.uk/technology/2017/12/18/artificial-intelligence-will-detect-child-abuse-images-save/  
+  - title: "Help run a nuclear submarine"
+    url: https://sputniknews.com/asia/201802051061362280-china-ai-subs/
+  - title: "Drive a police car"
+    url: https://www.digitaltrends.com/cars/ford-patent-filing-outlines-a-self-driving-police-car/
 
 - section: "Computing"
   wins:
@@ -526,6 +551,8 @@
     url: http://uk.businessinsider.com/spotting-fake-news-with-ai-2017-12
   - title: "Tell British and American accents apart"
     url: https://thenextweb.com/artificial-intelligence/2018/01/11/test-your-fake-british-or-american-accent-with-this-ai/
+  - title: "Decipher an ancient manuscript"
+    url: https://gizmodo.com/artificial-intelligence-may-have-cracked-freaky-600-yea-1822519232
 
 - section: "Vision"
   wins:
@@ -552,6 +579,10 @@
     url: https://www.theverge.com/2018/1/3/16844842/ai-computer-vision-trick-adversarial-patches-google
   - title: "Answer questions about an image"
     url: https://blogs.microsoft.com/ai/system-trains-machines-to-look-at-images-the-way-people-do-and-answer-questions-about-them/
+  - title: "Change the weather in a video"
+    url: https://www.theverge.com/2017/12/5/16737260/ai-image-translation-nvidia-data-self-driving-cars
+  - title: "Turn a webcam into a motion tracker"
+    url: https://thenextweb.com/artificial-intelligence/2018/01/30/programmers-use-tensorflow-ai-to-turn-any-webcam-into-microsoft-kinect/
   near:
   - title: "Guess your age"
     url: https://www.theverge.com/2015/4/30/8522649/microsoft-how-old-do-i-look
@@ -594,3 +625,5 @@
     url: https://www.biorxiv.org/content/biorxiv/early/2017/12/30/240317.full.pdf
   - title: "Design smartphone cases"
     url: http://www.iflscience.com/technology/amazon-ai-designed-to-create-phone-cases-goes-hilariously-wrong/
+  - title: "Fold a t-shirt"
+    url: https://www.theverge.com/2018/1/10/16865506/laundroid-laundry-folding-machine-foldimate-ces-2018
