--- a/_data/links.yml
+++ b/_data/links.yml
@@ -480,7 +480,7 @@
     url: https://www.nature.com/articles/d41586-018-02174-z
   - title: "Detect and locate earthquakes"
     url: https://www.seeker.com/artificial-intelligence/ai-earthquake-tracker-is-inspired-by-speech-recognition-technology
-  - title: "Track mosquitos"
+  - title: "Track mosquitos by their sound"
     url: https://blogs.nvidia.com/blog/2018/02/22/ai-malaria-mosquitoes/
   near:
   - title: "Simulate quantum systems"
